apps/prototype-fe/kubectl_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hmpps-dpr-poc
  labels:
    app: hmpps-dpr-poc
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: hmpps-dpr-poc
